bugfix navbar visibility

--- a/assets/index.css
+++ b/assets/index.css
@@ -12,6 +12,5 @@
 }
 header
 {
-    position: fixed;
     overflow: auto;
 }
